[gd_scene load_steps=7 format=3 uid="uid://duup6lpk2oq7k"]

[ext_resource type="Theme" uid="uid://c55lhrkiw4ysq" path="res://7.UI/Theme/AzyrTheme.tres" id="1_27h3d"]
[ext_resource type="Script" uid="uid://uunuybwjrmst" path="res://7.UI/Component/ValueSlider/value_slider.gd" id="2_e1itd"]
[ext_resource type="Texture2D" uid="uid://dye8y8vd03x3r" path="res://7.UI/Asset/texture_button1.png" id="3_3lbkv"]
[ext_resource type="Texture2D" uid="uid://cb5b8c0ou3r6g" path="res://7.UI/Asset/texture_button2.png" id="4_t6sjm"]
[ext_resource type="Texture2D" uid="uid://brcjmjowqgqny" path="res://7.UI/Asset/texture_button3.png" id="5_8ilge"]
[ext_resource type="Texture2D" uid="uid://dkofqw2g3hr3q" path="res://7.UI/Asset/texture_button4.png" id="6_t6sjm"]

[node name="ValueSlider" type="MarginContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 24.0
grow_horizontal = 2
size_flags_horizontal = 3
theme = ExtResource("1_27h3d")
script = ExtResource("2_e1itd")
metadata/_custom_type_script = "uid://uunuybwjrmst"

[node name="ValueSlider" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer5" type="MarginContainer" parent="ValueSlider"]
custom_minimum_size = Vector2(12, 0)
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="ValueSlider"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="ValueSlider/MarginContainer3"]
layout_mode = 2
theme = ExtResource("1_27h3d")
theme_type_variation = &"SlidePanel"

[node name="HBoxContainer" type="HBoxContainer" parent="ValueSlider/MarginContainer3"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="ValueSlider/MarginContainer3/HBoxContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="LabelSlider" type="Label" parent="ValueSlider/MarginContainer3/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("1_27h3d")
text = "Master Volume"
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="ValueSlider/MarginContainer3/HBoxContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="ValueSlider"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel2" type="Panel" parent="ValueSlider/MarginContainer2"]
layout_mode = 2
theme = ExtResource("1_27h3d")
theme_type_variation = &"SliderPanel"

[node name="HBoxContainer" type="HBoxContainer" parent="ValueSlider/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="LineEditValue" type="LineEdit" parent="ValueSlider/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
theme = ExtResource("1_27h3d")
text = "100"
alignment = 2
max_length = 3
emoji_menu_enabled = false
virtual_keyboard_type = 2
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false

[node name="MarginContainer4" type="MarginContainer" parent="ValueSlider/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="ButtonLeft" type="TextureButton" parent="ValueSlider/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("3_3lbkv")
texture_pressed = ExtResource("5_8ilge")
texture_hover = ExtResource("4_t6sjm")
texture_disabled = ExtResource("6_t6sjm")
texture_focused = ExtResource("4_t6sjm")

[node name="MarginContainer2" type="MarginContainer" parent="ValueSlider/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="SliderValue" type="HSlider" parent="ValueSlider/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_27h3d")
value = 100.0

[node name="MarginContainer3" type="MarginContainer" parent="ValueSlider/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="ButtonRight" type="TextureButton" parent="ValueSlider/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("3_3lbkv")
texture_pressed = ExtResource("5_8ilge")
texture_hover = ExtResource("4_t6sjm")
texture_disabled = ExtResource("6_t6sjm")
texture_focused = ExtResource("4_t6sjm")
flip_h = true

[node name="MarginContainer5" type="MarginContainer" parent="ValueSlider/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="MarginContainer4" type="MarginContainer" parent="ValueSlider"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
